update caution for data cleansing and wrangling

--- a/JS08_UTS/js08_uts.ipynb
+++ b/JS08_UTS/js08_uts.ipynb
@@ -25,6 +25,10 @@
     "\n",
     "#### Pra Pengolahan Data\n",
     "\n",
+    "**Perhatian**\n",
+    "\n",
+    "Sebelum Anda melakukan sesuatu terhadap data Anda, pastikan data yang Anda miliki sudah \"baik\", bebas dari data yang hilang, menggunakan tipe data yang sesuai, dan sebagainya\n",
+    "\n",
     "Data tweeter yang ada dapatkan merupakan sebuah data mentah, maka beberapa hal dapat Anda lakukan (namun tidak terbatas pada) yaitu,\n",
     "\n",
     "1. Case Folding\n",
