add boosting and stacking modules

--- a/JS09_Ensemble_Method/js09_2_bagging.ipynb
+++ b/JS09_Ensemble_Method/js09_2_bagging.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "(569, 30)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set accuracy: 0.96\n",
-      "Test set accuracy: 0.956140350877193\n"
+      "Test set accuracy: 0.95\n",
+      "Test set accuracy: 0.9473684210526315\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "# Pada kasus kali ini kita akan menggunakan seluruh parameter default dari RandomForest\n",
+    "# Pada kasus kali ini kita akan menggunakan estimator pada RandomForest\n",
     "# Untuk detail parameter (hyperparameter) silahkan cek dokumentasi\n",
     "\n",
     "rf = RandomForestClassifier(n_estimators=10, random_state=1)\n",
@@ -449,7 +449,7 @@
    "source": [
     "### Tugas\n",
     "\n",
-    "Pada folder data, terdapat dataset jamur yang kita gunakan pada materi Decision Tree. Berdasarkan dataset yang sama, bandingkan peforma antara algoritma DT dan RandomForest. Gunakan tunning hyperparameter untuk mendapatkan parameter dan akurasi yang terbaik. "
+    "Pada folder data, terdapat dataset jamur yang kita gunakan pada materi Decision Tree. Berdasarkan dataset yang sama, bandingkan peforma antara algoritma DT dan RandomForest. Gunakan tunning hyperparameter untuk mendapatkan parameter dan akurasi yang terbaik."
    ]
   },
   {
