--- a/JS07_UTS/js08_uts.ipynb
+++ b/JS07_UTS/js08_uts.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "### Informasi Data\n",
     "\n",
-    "Dataset yang akan digunakan adalah ****tweet_emotion.csv***. Berikut merupakan informasi tentang dataset yang dapat membantu Anda.\n",
+    "Dataset yang akan digunakan adalah ***tweet_emotion.csv***. Berikut merupakan informasi tentang dataset yang dapat membantu Anda.\n",
     "\n",
     "- Total data: 40000 data\n",
     "- Label emosi: anger, boredom, empty, enthusiasm, fun, happiness, hate, love, neutral, relief, sadness, surprise, worry\n",
@@ -74,84 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>content</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1956967341</td>\n",
-       "      <td>empty</td>\n",
-       "      <td>@tiffanylue i know  i was listenin to bad habi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1956967666</td>\n",
-       "      <td>sadness</td>\n",
-       "      <td>Layin n bed with a headache  ughhhh...waitin o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1956967696</td>\n",
-       "      <td>sadness</td>\n",
-       "      <td>Funeral ceremony...gloomy friday...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1956967789</td>\n",
-       "      <td>enthusiasm</td>\n",
-       "      <td>wants to hang out with friends SOON!</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1956968416</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>@dannycastillo We want to trade with someone w...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     tweet_id   sentiment                                            content\n",
-       "0  1956967341       empty  @tiffanylue i know  i was listenin to bad habi...\n",
-       "1  1956967666     sadness  Layin n bed with a headache  ughhhh...waitin o...\n",
-       "2  1956967696     sadness                Funeral ceremony...gloomy friday...\n",
-       "3  1956967789  enthusiasm               wants to hang out with friends SOON!\n",
-       "4  1956968416     neutral  @dannycastillo We want to trade with someone w..."
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data/tweet_emotions.csv')\n",
     "\n",
