--- a/JS10_Evaluation Merics/Evaluation_Metrics.ipynb
+++ b/JS10_Evaluation Merics/Evaluation_Metrics.ipynb
@@ -349,15 +349,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "b-9Dsn3yGXx7"
-      },
-      "source": [
-        "We need to reshape `y_proba` to a 1D vector denoting the probability of having  `benign` cancer."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -455,15 +446,6 @@
       "source": [
         "conf = metrics.confusion_matrix(y_test, y_preds)\n",
         "conf"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FISHOdmxqPXl"
-      },
-      "source": [
-        "We can also implement our own confusion matrix.  Here's my implementation."
       ]
     },
     {
@@ -967,11 +949,11 @@
         }
       ],
       "source": [
-        "print(f\"Calculated and Actual Accuracy:                          {results['ACC']: .3f}, {metrics.accuracy_score(y_test, y_preds): .3f}\")\n",
-        "print(f\"Calculated and Actual Precision score:                   {results['PPV']: .3f}, {metrics.precision_score(y_test, y_preds): .3f}\")\n",
-        "print(f\"Calculated and Actual Recall score:                      {results['TPR']: .3f}, {metrics.recall_score(y_test, y_preds): .3f}\")\n",
-        "print(f\"Calculated and Actual F1 score:                          {results['F1']: .3f}, {metrics.f1_score(y_test, y_preds): .3f}\")\n",
-        "print(f\"Calculated and Actual Matthew's correlation coefficient: {results['MCC']: .3f}, {metrics.matthews_corrcoef(y_test, y_preds): .3f}\")"
+        "print(f\"Calculated dan Actual Accuracy:                          {results['ACC']: .3f}, {metrics.accuracy_score(y_test, y_preds): .3f}\")\n",
+        "print(f\"Calculated dan Actual Precision score:                   {results['PPV']: .3f}, {metrics.precision_score(y_test, y_preds): .3f}\")\n",
+        "print(f\"Calculated dan Actual Recall score:                      {results['TPR']: .3f}, {metrics.recall_score(y_test, y_preds): .3f}\")\n",
+        "print(f\"Calculated dan Actual F1 score:                          {results['F1']: .3f}, {metrics.f1_score(y_test, y_preds): .3f}\")\n",
+        "print(f\"Calculated dan Actual Matthew's correlation coefficient: {results['MCC']: .3f}, {metrics.matthews_corrcoef(y_test, y_preds): .3f}\")"
       ]
     },
     {
@@ -997,10 +979,7 @@
       "outputs": [],
       "source": [
         "def get_roc_curve(y_test, y_proba, delta=0.1):\n",
-        "    \"\"\"\n",
-        "    Return the True Positive Rates (TPRs), False Positive Rates (FPRs), \n",
-        "    and the threshold values, seperated by delta.\n",
-        "    \"\"\"\n",
+        "\n",
         "    thresh = list(np.arange(0, 1, delta)) + [1]\n",
         "    TPRs = []\n",
         "    FPRs = []\n",
@@ -1397,7 +1376,7 @@
       ],
       "source": [
         "auc_score = get_roc_auc_score(y_test, y_proba)\n",
-        "print(f\"Our ROC-AUC score of SVC model is {auc_score: .4f}\")"
+        "print(f\"ROC-AUC score dari SVC model adalah {auc_score: .4f}\")"
       ]
     },
     {
@@ -1426,9 +1405,9 @@
       ],
       "source": [
         "auc_score = metrics.roc_auc_score(y_test, rand_proba)\n",
-        "print(f\"Scikit's ROC-AUC score of random predictions is: {auc_score: .4f}\")\n",
+        "print(f\"Scikit's ROC-AUC score dari random predictions adalah: {auc_score: .4f}\")\n",
         "auc_score = get_roc_auc_score(y_test, rand_proba)\n",
-        "print(f\"Our ROC-AUC score of random predictions is:      {auc_score: .4f}\")"
+        "print(f\"ROC-AUC score dari random predictions adalah:      {auc_score: .4f}\")"
       ]
     }
   ],
