--- a/JS13_KUIS_2/soal_kuis2.ipynb
+++ b/JS13_KUIS_2/soal_kuis2.ipynb
@@ -17,15 +17,16 @@
     "4. Berikan penjelasan untuk setiap tahapan. Jangan hanya kode!\n",
     "\n",
     "## Soal\n",
-    "1. Lakukan pemilahan data training dan testing yang sesuai dan proporsional dari data tersebut! (20 poin)\n",
-    "2. Tentukan data validasi! (20 poin)\n",
-    "3. Terapkan dua jenis metode klasifikasi dan lakukan perbandingan akurasi  dengan wajib melibatkan variabel keterlibatan volunteer sampai variabel luaran-luaran yang dihasilkan! (20 poin)\n",
-    "4. Lakukan tunning hyperparameter berdasarkan hasil klasifikasi pada nomor 3 menggunakan metode Grid Search, Random Search, dan Exhausive Search! Simpulkan parameter apa yang paling baik digunakan berdasarkan metode klasifikasi yang dipilih, dan berapa akurasinya. (40 poin)"
+    "1. Lakukan pemilahan data training dan testing yang sesuai dan proporsional dari data tersebut! (10 poin)\n",
+    "2. Tentukan data validasi! (10 poin)\n",
+    "3. Tentukan secara tepat kolom yang menjadi \"label\" (20 poin)\n",
+    "4. Terapkan dua jenis metode klasifikasi dan lakukan perbandingan akurasi  dengan wajib melibatkan variabel keterlibatan volunteer sampai variabel luaran-luaran yang dihasilkan! (20 poin)\n",
+    "5. Lakukan tunning hyperparameter berdasarkan hasil klasifikasi pada nomor 3 menggunakan metode Grid Search dan Random Search! Simpulkan parameter apa yang paling baik digunakan berdasarkan metode klasifikasi yang dipilih, dan berapa akurasinya. (40 poin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,41 +164,182 @@
        "      <td>TIDAK ADA</td>\n",
        "      <td>TIDAK ADA</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>8803.0</td>\n",
+       "      <td>8804.0</td>\n",
+       "      <td>9102.0</td>\n",
+       "      <td>8005.0</td>\n",
+       "      <td>9303.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>REGULER</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>6211.0</td>\n",
+       "      <td>8901.0</td>\n",
+       "      <td>9003.0</td>\n",
+       "      <td>9303.0</td>\n",
+       "      <td>9007.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>REGULER</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>8601.0</td>\n",
+       "      <td>8903.0</td>\n",
+       "      <td>8703.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>REGULER</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>8703.0</td>\n",
+       "      <td>8601.0</td>\n",
+       "      <td>9202.0</td>\n",
+       "      <td>9102.0</td>\n",
+       "      <td>6204.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>REGULER</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>8102.0</td>\n",
+       "      <td>7109.0</td>\n",
+       "      <td>5903.0</td>\n",
+       "      <td>7206.0</td>\n",
+       "      <td>8903.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>REGULER</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "      <td>TIDAK ADA</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>85 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id_ketua  id_anggota1  id_anggota2  id_anggota3  id_anggota4  id_anggota5  \\\n",
-       "0    7206.0       7214.0       6211.0       8602.0       7801.0          NaN   \n",
-       "1    7214.0       7109.0       8402.0       7903.0       9202.0          NaN   \n",
-       "2    5911.0       8201.0       8701.0       9101.0       9003.0          NaN   \n",
-       "3    8402.0       7702.0       8602.0       8903.0       8903.0          NaN   \n",
-       "4    8201.0       8305.0       5911.0       5903.0       8402.0          NaN   \n",
+       "    id_ketua  id_anggota1  id_anggota2  id_anggota3  id_anggota4  id_anggota5  \\\n",
+       "0     7206.0       7214.0       6211.0       8602.0       7801.0          NaN   \n",
+       "1     7214.0       7109.0       8402.0       7903.0       9202.0          NaN   \n",
+       "2     5911.0       8201.0       8701.0       9101.0       9003.0          NaN   \n",
+       "3     8402.0       7702.0       8602.0       8903.0       8903.0          NaN   \n",
+       "4     8201.0       8305.0       5911.0       5903.0       8402.0          NaN   \n",
+       "..       ...          ...          ...          ...          ...          ...   \n",
+       "80    8803.0       8804.0       9102.0       8005.0       9303.0          NaN   \n",
+       "81    6211.0       8901.0       9003.0       9303.0       9007.0          NaN   \n",
+       "82    8601.0       8903.0       8703.0          NaN          NaN          NaN   \n",
+       "83    8703.0       8601.0       9202.0       9102.0       6204.0          NaN   \n",
+       "84    8102.0       7109.0       5903.0       7206.0       8903.0          NaN   \n",
        "\n",
-       "  keterlibatan_vltr  jml_vltr_terlibat  tahun    skema luaran_hki  \\\n",
-       "0             TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
-       "1             TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
-       "2             TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
-       "3             TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
-       "4             TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "   keterlibatan_vltr  jml_vltr_terlibat  tahun    skema luaran_hki  \\\n",
+       "0              TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "1              TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "2              TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "3              TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "4              TIDAK                  0   2019  REGULER  TIDAK ADA   \n",
+       "..               ...                ...    ...      ...        ...   \n",
+       "80                YA                  3   2022  REGULER  TIDAK ADA   \n",
+       "81                YA                  3   2022  REGULER  TIDAK ADA   \n",
+       "82                YA                  3   2022  REGULER  TIDAK ADA   \n",
+       "83                YA                  3   2022  REGULER  TIDAK ADA   \n",
+       "84             TIDAK                  0   2022  REGULER  TIDAK ADA   \n",
        "\n",
-       "  jenis_luaran_hki potensi_hki luaran_lain jenis_luaran_lain  \\\n",
-       "0        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
-       "1        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
-       "2        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
-       "3        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
-       "4        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "   jenis_luaran_hki potensi_hki luaran_lain jenis_luaran_lain  \\\n",
+       "0         TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "1         TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "2         TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "3         TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "4         TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "..              ...         ...         ...               ...   \n",
+       "80        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "81        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "82        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "83        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
+       "84        TIDAK ADA       TIDAK   TIDAK ADA         TIDAK ADA   \n",
        "\n",
-       "  status_luaran_lain  \n",
-       "0          TIDAK ADA  \n",
-       "1          TIDAK ADA  \n",
-       "2          TIDAK ADA  \n",
-       "3          TIDAK ADA  \n",
-       "4          TIDAK ADA  "
+       "   status_luaran_lain  \n",
+       "0           TIDAK ADA  \n",
+       "1           TIDAK ADA  \n",
+       "2           TIDAK ADA  \n",
+       "3           TIDAK ADA  \n",
+       "4           TIDAK ADA  \n",
+       "..                ...  \n",
+       "80          TIDAK ADA  \n",
+       "81          TIDAK ADA  \n",
+       "82          TIDAK ADA  \n",
+       "83          TIDAK ADA  \n",
+       "84          TIDAK ADA  \n",
+       "\n",
+       "[85 rows x 16 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +349,7 @@
     "\n",
     "df = pd.read_excel('data/dataset_quiz.xlsx')\n",
     "\n",
-    "df.head()"
+    "df.head(100)"
    ]
   },
   {
