--- a/JS14_Dimesional Reduction/Dimensional_reduction.ipynb
+++ b/JS14_Dimesional Reduction/Dimensional_reduction.ipynb
@@ -333,7 +333,7 @@
         "import numpy as np\n",
         "from glob import glob\n",
         "import cv2\n",
-        "images = [cv2.imread(file) for file in glob('train_/train/*.png')]"
+        "images = [cv2.imread(file) for file in glob('/content/drive/MyDrive/Colab Notebooks/train_.zip (Unzipped Files)/train/*.png')]"
       ]
     },
     {
