--- a/JS14_Dimesional Reduction/Dimensional_reduction.ipynb
+++ b/JS14_Dimesional Reduction/Dimensional_reduction.ipynb
@@ -623,7 +623,11 @@
       "cell_type": "markdown",
       "id": "8544efdc",
       "metadata": {},
-      "source": []
+      "source": [
+        "## References:\n",
+        "[Dimensionality Reduction](https://www.kdnuggets.com/2020/05/dimensionality-reduction-principal-component-analysis.html)<br>\n",
+        "[Dimensionality Reduction Techniques](https://www.analyticsvidhya.com/blog/2018/08/dimensionality-reduction-techniques-python/)<br>"
+      ]
     }
   ],
   "metadata": {
